--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -20,7 +20,9 @@
         "jsonwebtoken": "^8.2.2",
         "mongodb": "^3.0.10",
         "mongoose": "^5.1.4",
-        "rootpath": "^0.1.2"
+        "nodemailer": "^5.1.1",
+        "rootpath": "^0.1.2",
+        "xoauth2": "^1.2.0"
     },
     "devDependencies": {
         "nodemon": "^1.17.5"
