--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -20,6 +20,7 @@
         "jsonwebtoken": "^8.2.2",
         "mongodb": "^3.0.10",
         "mongoose": "^5.1.4",
+        "morgan": "^1.9.1",
         "nodemailer": "^5.1.1",
         "rootpath": "^0.1.2",
         "xoauth2": "^1.2.0"
