--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -15,6 +15,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.18.3",
         "cors": "^2.8.4",
+        "crypto": "^1.0.1",
         "express": "^4.16.3",
         "express-jwt": "^5.3.1",
         "jsonwebtoken": "^8.2.2",
